servarr/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: jellyfin
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/servarr-default: "true"
        io.kompose.service: jellyfin
    spec:
      containers:
        - env:
            - name: TZ
              value: Africa/Casablanca
          image: lscr.io/linuxserver/jellyfin:latest
          name: jellyfin
          ports:
            - containerPort: 8096
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: data
              subPath: media
            - mountPath: /config
              name: config
              subPath: jellyfin-config
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: config
          persistentVolumeClaim:
            claimName: config
status: {}
