servarr/jellyseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: jellyseerr
  name: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jellyseerr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/servarr-default: "true"
        io.kompose.service: jellyseerr
    spec:
      containers:
        - env:
            - name: TZ
              value: Africa/Casablanca
          image: fallenbagel/jellyseerr:latest
          name: jellyseerr
          ports:
            - containerPort: 5055
          resources: {}
          volumeMounts:
            - mountPath: /app/config
              name: config
              subPath: jellyseerr-config
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
status: {}
