servarr/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/servarr-default: "true"
        io.kompose.service: qbittorrent
    spec:
      containers:
        - env:
            - name: TZ
              value: Africa/Casablanca
            - name: WEBUI_PORT
              value: "8080"
          image: lscr.io/linuxserver/qbittorrent:latest
          name: qbittorrent
          ports:
            - containerPort: 8080
            - containerPort: 6881
            - containerPort: 6881
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /data/torrents
              name: data
              subPath: torrents
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
status: {}
