servarr/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/servarr-default: "true"
        io.kompose.service: radarr
    spec:
      containers:
        - env:
            - name: TZ
              value: Africa/Casablanca
          image: lscr.io/linuxserver/radarr:latest
          name: radarr
          ports:
            - containerPort: 7878
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
status: {}
