servarr/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: jellyfin
  name: jellyfin
spec:
  ports:
    - name: "8096"
      port: 8096
      targetPort: 8096
  selector:
    io.kompose.service: jellyfin
status:
  loadBalancer: {}
