servarr/jellyseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: jellyseerr
  name: jellyseerr
spec:
  ports:
    - name: "5055"
      port: 5055
      targetPort: 5055
  selector:
    io.kompose.service: jellyseerr
status:
  loadBalancer: {}
