servarr/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: prowlarr
  name: prowlarr
spec:
  ports:
    - name: "9696"
      port: 9696
      targetPort: 9696
  selector:
    io.kompose.service: prowlarr
status:
  loadBalancer: {}
