servarr/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "6881"
      port: 6881
      targetPort: 6881
    - name: 6881-udp
      port: 6881
      protocol: UDP
      targetPort: 6881
  selector:
    io.kompose.service: qbittorrent
status:
  loadBalancer: {}
