servarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: sonarr
  name: sonarr
spec:
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  selector:
    io.kompose.service: sonarr
status:
  loadBalancer: {}
